css/style.css
/* style for mystery --- view site in mobile view for best results*/


/* ============= BUTTON STUFF ============= */
/*customize for your page, i made them links on my page not buttons, its a sudo class so you gotta name the blue one with the white button name like i did below

*****container

.buttonDiv{
    
    position:fixed;
    bottom:15%;
	width:100%;
	padding:1% 0;
    margin: auto;
    display: inline-block;
	====>>> some pages ====>>> background-color:rgba(255,255,255,0.4);

}



/*******white button*********

.btn {
	display: inline-block;
	color: #666;
	background-color: #eee;
	text-transform: uppercase;
	letter-spacing: 2px;
	font-size: 12px;
	padding: 10px 30px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border: 1px solid rgba(0,0,0,0.3);
	border-bottom-width: 3px;
	
}

.btn:hover {
		background-color: #e3e3e3;
		border-color: rgba(0,0,0,0.5);
	}
	
.btn:active {
		background-color: #CCC;
		border-color: rgba(0,0,0,0.9);
	}
	
/******blue button*********
btn.btn-blue {
	background-color: #699DB6;
	border-color: rgba(0,0,0,0.3);
	text-shadow: 0 1px 0 rgba(0,0,0,0.5);
	color: #FFF;
}

btn.btn-blue:hover {
		background-color: #4F87A2;
		border-color: rgba(0,0,0,0.5);
	}
	
btn.btn-blue:active {
		background-color: #3C677B;
		border-color: rgba(0,0,0,0.9);
	}



*/






body {
    margin:0;
    padding:0;
    
    font-family: 'Oxygen', sans-serif;
    font-weight: 300;
    
    background: -webkit-linear-gradient(#ffffff 20%, #d1d1d1 , #b2b2b2 , #9f9f9f 60%) fixed; /* For Safari 5.1 to 6.0 */
        background: -o-linear-gradient(#ffffff 20%, #d1d1d1 , #b2b2b2 , #9f9f9f 60%) fixed; /* For Opera 11.1 to 12.0 */
        background: -moz-linear-gradient(#ffffff 20%, #d1d1d1 , #b2b2b2 , #9f9f9f 60%) fixed; /* For Firefox 3.6 to 15 */
        background: linear-gradient(#ffffff 20%, #d1d1d1 , #b2b2b2 , #9f9f9f 60%) fixed; /* Standard syntax */
    
}

p {
	
	
	font-size: 100%;
	font-family: 'Fira Mono',sans-serif;
    text-align:left;  
	letter-spacing: 5px;

	margin-left: 30px;
    }
	

/* use Fira Mono for all headings look at top of character html to get link to put on your page*/

h1 {
   	font-size: 100%;
	font-family: 'Fira Mono',sans-serif;
    text-align: center; 
 
	font-weight: bold;
	
}

h2 {
    font-size:10pt;
    font-family: 'Oxygen', sans-serif;
    font-weight: 400;
}
input {
    font-family: 'Oxygen', sans-serif;
    font-weight: 300;
}
a {
    text-decoration:none;
    color:#627f73;
}

a:hover {
    
    color:#C4FFe6;
}

.hspace {
    margin: 0 4%;   
}
.vspace {
    margin: 4% 0;   
}

.center {
    width: 60%;
    margin:auto;

}

.center-text {
    text-align:center;   
}
.right-text {
    text-align:right;   
}
/* ============= SPLASH PAGE ============= */


.splashlogo {
	
	text-align:center;  
	
	
	}

.thumb {
  
 
  vertical-align: middle; 
  text-align: center;
	}

.crimetape {
    
 margin-right: 35px;
  margin-left: -5px;
	}
/* ============= HEADER STYLES ============= */
.header {
    margin:0px;
    width:100%;

    display:block;
   
}

.header div {
    margin:auto;
    width:30%;
}

.header img {
    height:auto;
    width:100%;
    
}

/* ============= MAIN CONTENT STYLES ============= */


.content h4 {
    text-align:center;   
}

/* ------------- theme page ----------------*/
.themecase {
    margin:auto;   
    width:90%;
}
.themecase img {
    width:44%; 
    margin:3%;
}
.themecase img:nth-child(3n+0) {
    width: 92%;
    margin:5 0 4 0;
    
}


/* ------------- login or sign up page ----------------*/

.biglogo {
    width: 60%;
    margin: 6% 20% 0%;

}
.login-buttons {
    width: 60%;
    margin:auto;
    padding-top: 40px;
}
.buttons {
    background-color:#599DAC;
    color:#ffffff;
    border:none;
    clear:both;
    float:left;
    width:100%;
    font-size:12pt;
    margin-bottom:20px;
    padding:10px;
    border-radius:4px;
}


/* ------------- login page ----------------*/



.textbox {
  
    border-style:solid;
    border-color:#ffffff;
    border-width: 1px;
    clear:both;
    float:left;
    width:100%;
    font-size:12pt;
    margin-bottom:20px;
    padding:10px;
    border-radius:4px;
    background-color:rgba(100, 100, 100, 0);
}

#enter {
    
    width:70%;
    margin-left:15%;
}

/* ------------- profile pages ----------------*/

#options{
	width:100px;
    height:50px;
    position: fixed;
    bottom: 200px;
    left: 110px;
	clear:both;
    float:centre;
	width: 40%;
    margin:auto;

}

#options button{
	background-color:#27A5A1; 
	border-style:solid;
    border-color:grey;
    border-width: 1px;
	clear:both;
    float:centre;
    width:100%;
    font-size:12pt;
    margin-bottom:15px;
    padding:8px;
    border-radius:4px;
}


#display{
	border-style:solid;
    border-color:lightgrey;
    border-radius:60px;
    border-width: 1px;
    background-color:black;
    opacity:0.15;
    height:37vh;
    width:90vw;
    position: fixed;
    top:139px;
    left:18px;
    z-index:0px;

}

#display img{
	top:190px;
    opacity:0.95;
	z-index:2px;
	width:45vw;
	height:25vh;
	position:fixed;
	left:90px;
    padding: 10px;
}


#buttons{
	width:100px;
    height:50px;
    position: fixed;
    bottom: 430px;
    left: 60px;
	clear:both;
    float:centre;
	width: 70%;
    margin:auto;

}

#buttons button{
	background-color:white;
	border-style:solid;
    border-color:white;
    border-width: 1px;
	clear:both;
    float:centre;
    width:100%;
    font-size:12pt;
    margin-bottom:20px;
    padding:10px;
    border-radius:80px;
}

#DP img{
	opacity:0.95;
	z-index:2px;
	width:45vw;
	height:25vh;
	position:fixed;
	left:90px;
    padding: 10px;
}

/* ------------- messenger pages ----------------*/

#msg {
    padding: 1px;
    width:75%;
    background-color:"white";
    position: fixed;
    bottom: 12vh;
    left: 10px;
}

#send {
    padding: 1px;
    width:15%;
    height: 3vh;
    background-color:"white";
    position: fixed;
    bottom: 12vh;
    margin-left: 83%;
}
/* ... */

